1999-12-21  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-helpsys.c (gnome_help_app_topics): Removed extra loop 
	iterator, to prevent a crash.
	(gnome-help_path_resolve): Same.

1999-12-21  Havoc Pennington  <hp@redhat.com>

	* oafgnome.c (rcmd_activator): make it compile

	* gnome-preferences.h: take load/save custom out of the header
	(this hasn't compiled for ages, don't know why no one noticed).

	* gnome-stock.h, gnome-stock.c: emacs magic

	* gnome-pixmap.c, gnome-pixmap.h: Add copyright notices and file
	magic. comment cleanup

	* gnome-ditem-edit.h, gnome-ditem-edit.c: mostly cut-and-paste 
	from gnome-dentry-edit, not testable until we get the icon list.
	
Tue Dec 21 02:06:25 1999  George Lebl <jirka@5z.com>

	* gnome-calculator.[ch]: make the get_result be a function rather
	  then a macro to make bindings easier

1999-12-20  Elliot Lee  <sopwith@redhat.com>
	* *.h: Shuffle structure elements around.
	* gtkpixmapmenuitem.c: Import fix from gnome-libs-1-0
	* oafgnome.c, gnome-remote-bootstrap.c: Pass $LANG

1999-12-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: major source compatibilty mayhem;
	(gnome_mdi_remove_view, gnome_mdi_remove_child): drop the force
	parameter. always respect the return from the corresponding
	signal handler.
	(gnome_mdi_new_toplevel): new function.
	(gnome_mdi_app_create, gnome_mdi_view_changed): new default signal
	handlers. both these signals now RUN_FIRST.
	(gnome_mdi_update_child): not public any more.
	lots of fixes and simplifications of the code;
	* gnome-mdi-child.c: #include<gnome-mdiP.h> and use the new
	functions
	* gnome-mdi-session.c: #include<gnome-mdiP.h>
	(restore_window_child): show the window _after_ it has been messed
	with.
	* gnome-mdiP.h: a private header with stuff shared between all
	gnome-mdi-* modules.
	* Makefile.am: put gnome-mdiP.h in libgnomeui_la_SOURCES as this
	does not install it.

1999-12-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
